--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,5 +14,36 @@
 		"ConnectedWithSuccess": "Connected with success",
 		"AllFieldsAreRequired": "All fields are required",
 		"ErrorIncorrectLoginOrPwd": "Incorrect login or password"
+	},
+	"SignUp":{
+		"WelcomeBack": "Welcome,",
+		"Login": "Login",
+		"Nom": "Name",
+		"Prenom": "Surname",
+		"AdresseEmail": "E-mail address",
+		"ChoixGendre": "Choose your Gender",
+		"DateNais": "Date of birth",
+		"LieuNais": "Place of birth",
+		"NumTel": "Telephone number",
+		"Langue": "Choose your language",
+		"PhotoProfil": "Choose a profile picture",
+		"Formulaire": "Fill the form below to create your",
+		"Compte": "account",
+		"Password" : "Password",
+		"ConfirmPwd" : "Confirm password",
+		"Connection" : "Sign in",
+		"CreeCompte": "Create your account here",
+		"NomPlaceHolder": "Please enter your name",
+		"PrenomPlaceHolder": "Please enter your surname",
+		"AdresseEmailPlaceHolder": "example:bebubbuu@sample.com",
+		"FemaleGenderOptionPlaceHolder": "Female",
+		"MaleGenderOptionPlaceHolder": "Male",
+		"LieuNaisPlaceHolder": "Please enter your place of birth",
+		"NumTelPlaceHolder": "example: 691971542",
+		"EnglishLanguageOptionPlaceHolder": "English",
+		"FrenchLanguageOptionPlaceHolder": "French",
+		"LoginPlaceHolder": "Please enter your login",
+		"PasswordPlaceHolder": "Please enter your password",
+		"ConfirmPasswordPlaceHolder": "Confirm password"
 	}
 }
