--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -55,8 +55,7 @@
 		"LoginPlaceHolder": "Votre login",
 		"PasswordPlaceHolder": "Veuillez saisir le mot de passe de votre compte",
 		"ConfirmPasswordPlaceHolder": "Saisir a nouveau le mot de passe"
-	}
-	,
+	},
 	"Forgotpwd": {
 		"Forgotpassword": "Mot de passe oublie?",
 		"Form": "Utilisez le formulaire ci-dessous pour le retrouver.",
@@ -156,7 +155,58 @@
 		"FillForm": "Remplir le formulaire ci-dessous pour enregistrer un ",
 		"Folder": "dossier",
 		"OnGepad": "sur GEPAD",
-		"SelectFile": "Après avoir selectionné le type de dossier, visualiser ses caractéristiques à la droite de votre écran"
+		"Note": "Note:",
+		"FileSelection": "Après avoir selectionné le type de dossier, visualiser ses caractéristiques à la droite de votre écran",
+		"Select": "Choisir le type du dossier",
+		"SelectFolderType": "selectionner le type de dossier a constituer",
+		"ConstitutionFolder": "Constitution du dossier",
+		"PieceJointes": "piece(s) jointe(s))",
+		"DossierPret": "Votre dossier est pret:",
+		"DescriptionDossier": "Saisir la description du contenu du dossier",
+		"PlaceholderDescription": "Veuillez ecrire une description precise du contenu de ce dossier",
+		"UserEmailAddr": "Saisir l'adresse email de l'utilisateur concerne",
+		"NoteUserEmailAddr": "Vous devez saisir l'adresse email que cet utilisateur a choisit lors de la creation de son compte, ainsi on pourra lui generer automatiquement un code lui permettant de suivre l'evolution du dossier ainsi cree.",
+		"PlaceHolderUserEmail": "exemple: toto@gmail.com",
+		"Cancel": "Annuler tout",
+		"Create": "Creer le dossier",
+		"AssociatedFolders": "A ce type de dossiers on associe",
+		"InfoFileSize": "La taille maximale de pieces jointes associes a ce type de dossier",
+		"Is": "est de",
+		"Caracteristics": "Caracteristiques:",
+		"AssociatedFiles": "Des pieces a associer au type de dossier choisi:",
+		"Name": "Nom: ",
+		"Format": "Format: ",
+		"MaxFileSize": "Taille max du fichier: "
+	},
+	"LeftSide": {
+		"TodayOne": "Ajourd'hui 1",
+		"TodayTwo": "Ajourd'hui 2",
+		"TodayThree": "Ajourd'hui 3",
+		"TodayFour": "Ajourd'hui 4"
+	},
+	"VisitorLeftSide": {
+		"MyFiles": "Mes dossiers",
+		"FollowEvolution": "Suivre l'evolution",
+		"filesInTreatment": "Dossiers en traitement",
+		"PendingFiles": "Dossiers en attente",
+		"RejectedFiles": "Dossiers rejetes",
+		"ArchivedFiles": "Dossiers archives",
+		"Profile": "Profil",
+		"ModifyProfile": "Modifier mes infos"
+	},
+	"CreateFolderJS": {
+		"Error": "Erreur",
+		"ErrorNotif1": "Le format de fichier choisit est incorrect. Vous devez choisir un format de fichier correct pour ce type de fichier. Lisez la description a la droite de votre ecran pour plus de details",
+		"ErrorNotif21": "La taille du fichier choisi est trop grande (",
+		"ErrorNotif22": "). Vous devez choisir un fichier ayant une taille inferieure a ",
+		"WrongFill": "Formulaire mal remplit, veuillez completer les champs obligatoires",
+		"Success": "Succes"
+	},
+	"NavBarAdmin": {
+		"ChooseLanguage": "Choisir la langue",
+		"Languages": "Langues",
+		"Profile": "Profil",
+		"SignOut": "Se Déconnecter"
 	}
 
 }
