Mise a jour des informations personnelles de l'utilisateur

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -160,7 +160,7 @@
 		"Select": "Choisir le type du dossier",
 		"SelectFolderType": "selectionner le type de dossier a constituer",
 		"ConstitutionFolder": "Constitution du dossier",
-		"PieceJointes": "piece(s) jointe(s))",
+		"PieceJointes": "piece(s) jointe(s)",
 		"DossierPret": "Votre dossier est pret:",
 		"DescriptionDossier": "Saisir la description du contenu du dossier",
 		"PlaceholderDescription": "Veuillez ecrire une description precise du contenu de ce dossier",
