--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,9 +5,9 @@
 		"Yes": "Oui, supprimer",
 		"No": "Non, annuler",
 		"Deleted": "Supprimé",
-		"DeletedMessage": "Element supprimé avec succès",
+		"DeletedMessage": "Élément supprimé avec succès",
 		"Cancelled": "Annulé",
-		"CancelledMessage": "Element conservé"
+		"CancelledMessage": "Élément conservé"
 	},
 	"Login": {
 		"KeepMeLoggedIn": "Garder ma session active",
@@ -34,22 +34,22 @@
 		"ChoixGendre": "Choisir votre genre",
 		"DateNais": "Date de naissance",
 		"LieuNais": "Lieu de naissance",
-		"NumTel": "Numero de telephone",
-		"Langue": "Choisir votre langue",
+		"NumTel": "Numéro de téléphone",
+		"Langue": "Choisir la langue",
 		"PhotoProfil": "Choisir une photo de profile",
-		"Formulaire": "Remplir le formulaire ci-dessous pour creer votre",
+		"Formulaire": "Remplir le formulaire ci-dessous pour créer votre",
 		"Compte": "compte",
 		"Password" : "Mot de passe",
 		"ConfirmPwd" : "Confirmez le mot de passe",
 		"Connection" : "Connectez-vous ici",
-		"CreeCompte": "Creer votre compte ici",
+		"CreeCompte": "Créer votre compte ici",
 		"NomPlaceHolder": "Veuillez saisir votre nom",
 		"PrenomPlaceHolder": "Veuillez saisir votre prenom",
 		"AdresseEmailPlaceHolder": "example:bebubuebu@sample.com",
 		"FemaleGenderOptionPlaceHolder": "Feminin",
 		"MaleGenderOptionPlaceHolder": "Masculin",
 		"LieuNaisPlaceHolder": "Veuillez saisir votre lieu de naissance",
-		"NumTelPlaceHolder": "exemple: 691971542..",
+		"NumTelPlaceHolder": "exemple: 691871542..",
 		"EnglishLanguageOptionPlaceHolder": "Anglais",
 		"FrenchLanguageOptionPlaceHolder": "Francais",
 		"LoginPlaceHolder": "Votre login",
@@ -57,15 +57,15 @@
 		"ConfirmPasswordPlaceHolder": "Saisir a nouveau le mot de passe"
 	},
 	"Forgotpwd": {
-		"Forgotpassword": "Mot de passe oublie?",
+		"Forgotpassword": "Mot de passe oublié?",
 		"Form": "Utilisez le formulaire ci-dessous pour le retrouver.",
 		"EmailPlaceholder": "Email ici...",
-		"Recoverpwd": "Reinitialiser le mot de passe",
+		"Recoverpwd": "Réinitialiser le mot de passe",
 		"Sign-in": "Se connecter"
 	},
 	"VisitorHome": {
 		"ArchivedFolders": "Dossiers Archivés",
-		"ServerUnavailable": "Serveur indisponible veuillez verifier votre connexion a internet",
+		"ServerUnavailable": "Serveur indisponible veuillez vérifier votre connexion a internet",
 		"WaitingFolders": "Dossiers en Attente",
 		"onWorkingFolders": "Dossiers en Traitements",
 		"rejectedFolders": "Dossiers rejetés",
@@ -75,25 +75,25 @@
 		"PhoneNumber": "Numéro de téléphone",
 		"BirthDate": "Date de naissance",
 		"BirthPlace": "Lieu de naissance",
-		"SpokenLang": "Langue parlée",
+		"SpokenLang": "Langue parlé",
 		"allRejectedFolders": "Total dossiers rejetés",
 		"allSubmittedFolders": "Total dossiers soumis",
 		"allOnWorkingFolders": "Total dossiers en traitement",
-		"ActivityStat": "Statistiques sur vos activites",
-		"IntroDescription": "A partir de cette interface vous pouvez suivre l'evolution des documents que vous avez soumis et consulter l'historique des documents soumis dans le passé",
+		"ActivityStat": "Statistiques sur vos activités",
+		"IntroDescription": "A partir de cette interface vous pouvez suivre l'évolution des documents que vous avez soumis et consulter l'historique des documents soumis dans le passé",
 		"Welcome": "Bienvenue",
 		"WorkSpace": "Ceci est votre espace de travail",
-		"CompleteProfile": "Completer votre profil"
+		"CompleteProfile": "Compléter votre profil"
 
 	},
 	"AcceptedDocument": {
 		"Foldersintreatment": "Dossiers en cours de traitement",
 		"Workspace": "Ceci est votre espace de travail",
 		"ViewAllFoldersInterface": "A partir de cette interface vous pouvez visualiser l'ensemble de vos dossiers qui sont en cours de traitement",
-		"NoteSecurite1": "Note sur la securite:",
-		"NoteSecurite2": "toutes vos donnees sont securisees et nous vous garantissions leur suivie et leur access en toute securite",
+		"NoteSecurite1": "Note sur la sécurite:",
+		"NoteSecurite2": "toutes vos données sont securisées et nous vous garantissions leur suivie et leur accès en toute securite",
 		"Name": "Nom",
-		"JointFiles": "Pieces jointes",
+		"JointFiles": "Pièces jointes",
 		"SubmissionDate": "Date de soumission",
 		"Percentage": "Pourcentage",
 		"PleaseWait": "Patientez svp...",
@@ -101,15 +101,15 @@
 		
 	},
 	"ArchivedDocument": {
-		"ArchivedFiles": "Dossiers traites et archives",
+		"ArchivedFiles": "Dossiers traités et archives",
 		"Workspace": "Ceci est votre espace de travail",
-		"ViewAllFoldersInterface": "A partir de cette interface vous pouvez visualiser l'ensemble de vos dossiers qui ont ete traites",
-		"NoteSecurite1": "Note sur la securite:",
-		"NoteSecurite2": "toutes vos donnees sont securisees et nous vous garantissions leur suivie et leur access en toute securite",
-		"ArchivedFolders": "Dossiers archive",
+		"ViewAllFoldersInterface": "A partir de cette interface vous pouvez visualiser l'ensemble de vos dossiers qui ont été traités",
+		"NoteSecurite1": "Note sur la sécurité:",
+		"NoteSecurite2": "toutes vos données sont securisées et nous vous garantissions leur suivie et leur access en toute sécurité",
+		"ArchivedFolders": "Dossiers archivés",
 		"Name": "Nom",
 		"Description": "Description",
-		"JointFiles": "Pieces jointes",
+		"JointFiles": "Pièces jointes",
 		"SubmissionDate": "Date de soumission",
 		"Actions": "Actions",
 		"PleaseWait": "Patientez svp...",
@@ -120,12 +120,12 @@
 		"PendingFiles": "Dossiers en attente de traitements",
 		"Workspace": "Ceci est votre espace de travail",
 		"ViewAllFoldersInterface": " A partir de cette interface vous pouvez visualiser l'ensemble des dossiers que vous avez soumis mais qui sont en attente de traitement",
-		"NoteSecurite1": "Note sur la securite:",
-		"NoteSecurite2": "toutes vos donnees sont securisees et nous vous garantissions leur suivie et leur access en toute securite",
+		"NoteSecurite1": "Note sur la sécurité:",
+		"NoteSecurite2": "toutes vos donnees sont securisées et nous vous garantissions leur suivie et leur accèss en toute securite",
 		"PendingFolders": "Dossiers en attente de traitement",
 		"Name": "Nom",
 		"Description": "Description",
-		"JointFiles": "Pieces jointes",
+		"JointFiles": "Pièces jointes",
 		"SubmissionDate": "Date de soumission",
 		"Actions": "Actions",
 		"PleaseWait": "Patientez svp...",
@@ -133,15 +133,15 @@
 		
 	},
 	"RejectedDocument": {
-		"RejectedFiles": "Dossiers rejetes",
+		"RejectedFiles": "Dossiers reJétés",
 		"Workspace": "Ceci est votre espace de travail",
-		"ViewAllFoldersInterface": "  A partir de cette interface vous pouvez visualiser l'ensemble des dossiers que vous avez soumis mais qui ont ete rejetes pour une raison ou une autre",
-		"NoteSecurite1": "Note sur la securite:",
+		"ViewAllFoldersInterface": "  A partir de cette interface vous pouvez visualiser l'ensemble des dossiers que vous avez soumis mais qui ont été rejétés pour une raison ou une autre",
+		"NoteSecurite1": "Note sur la sécurité:",
 		"NoteSecurite2": "toutes vos donnees sont securisees et nous vous garantissions leur suivie et leur access en toute securite",
-		"RejectedFolders": "Dossiers rejetes",
+		"RejectedFolders": "Dossiers reJétés",
 		"Name": "Nom",
 		"Description": "Description",
-		"JointFiles": "Pieces jointes",
+		"JointFiles": "Pièces jointes",
 		"SubmissionDate": "Date de soumission",
 		"Actions": "Actions",
 		"PleaseWait": "Patientez svp...",
@@ -151,29 +151,29 @@
 	"CreateFolder": {
 		"Welcome": "Bienvenue",
 		"WorkSpace": "Ceci est votre espace de travail",
-		"RegisterView": "Cette interface est le point d'entrée de tous les documents dans le systeme, vous devez donc vous assurer de la cohérence de données entrées dans cette partie. Les dossiers enregistrés feront l'objet de multiples traitements à travers les differents services de votre structure.",
+		"RegisterView": "Cette interface est le point d'entrée de tous les documents dans le système, vous devez donc vous assurer de la cohérence de données entrées dans cette partie. Les dossiers enregistrés feront l'objet de multiples traitements à travers les differents services de votre structure.",
 		"FillForm": "Remplir le formulaire ci-dessous pour enregistrer un ",
 		"Folder": "dossier",
 		"OnGepad": "sur GEPAD",
 		"Note": "Note:",
 		"FileSelection": "Après avoir selectionné le type de dossier, visualiser ses caractéristiques à la droite de votre écran",
 		"Select": "Choisir le type du dossier",
-		"SelectFolderType": "selectionner le type de dossier a constituer",
+		"SelectFolderType": "Selectionner le type de dossier a constituer",
 		"ConstitutionFolder": "Constitution du dossier",
-		"PieceJointes": "piece(s) jointe(s)",
+		"PieceJointes": "pièce(s) jointe(s)",
 		"DossierPret": "Votre dossier est pret:",
 		"DescriptionDossier": "Saisir la description du contenu du dossier",
 		"PlaceholderDescription": "Veuillez ecrire une description precise du contenu de ce dossier",
 		"UserEmailAddr": "Saisir l'adresse email de l'utilisateur concerne",
-		"NoteUserEmailAddr": "Vous devez saisir l'adresse email que cet utilisateur a choisit lors de la creation de son compte, ainsi on pourra lui generer automatiquement un code lui permettant de suivre l'evolution du dossier ainsi cree.",
+		"NoteUserEmailAddr": "Vous devez saisir l'adresse email que cet utilisateur a choisit lors de la création de son compte, ainsi on pourra lui génerer automatiquement un code lui permettant de suivre l'évolution du dossier ainsi crée.",
 		"PlaceHolderUserEmail": "exemple: toto@gmail.com",
 		"Cancel": "Annuler tout",
 		"Create": "Creer le dossier",
-		"AssociatedFolders": "A ce type de dossiers on associe",
+		"AssociatedFolders": "A ce type de dossiers on associé",
 		"InfoFileSize": "La taille maximale de pieces jointes associes a ce type de dossier",
 		"Is": "est de",
-		"Caracteristics": "Caracteristiques:",
-		"AssociatedFiles": "Des pieces a associer au type de dossier choisi:",
+		"Caracteristics": "Caractéristiques:",
+		"AssociatedFiles": "Des pièces a associer au type de dossier choisi:",
 		"Name": "Nom: ",
 		"Format": "Format: ",
 		"MaxFileSize": "Taille max du fichier: "
@@ -186,11 +186,11 @@
 	},
 	"VisitorLeftSide": {
 		"MyFiles": "Mes dossiers",
-		"FollowEvolution": "Suivre l'evolution",
+		"FollowEvolution": "Suivre l'Évolution",
 		"filesInTreatment": "Dossiers en traitement",
 		"PendingFiles": "Dossiers en attente",
-		"RejectedFiles": "Dossiers rejetes",
-		"ArchivedFiles": "Dossiers archives",
+		"RejectedFiles": "Dossiers rejétés",
+		"ArchivedFiles": "Dossiers archivés",
 		"Profile": "Profil",
 		"ModifyProfile": "Modifier mes infos"
 	},
@@ -217,13 +217,23 @@
 		"toCheckStatus": "Pour consulter l'état d'avancement d'un de vos dossier, vous devez saisir son numéro",
 		"typeFolderId": "Saisir le numéro du dossier juste en dessous",
 		"typeFolderNumber": "Saisir le numéro de votre dossier ici",
-		"seeFolderProgression": "Voir l'état d'avancement du dossier"
+		"seeFolderProgression": "Voir l'état d'avancement du dossier",
+		"percentageProgress": "POURCENTAGE D'EVOLUTION DU DOSSIER",
+		"folderState": "État actuel"
 	},
 	"FolderTrackingJS": {
-		"Notif1": "Les dossiers ont ete charges",
-		"Notif2": "Les dossiers n'ont pas pu etre charges",
-		"Notif3": "Votre session a expiree veuillez vous connecter",
-		"Error": "Erreur"
+		"Notif1": "Les dossiers ont été chargés",
+		"Notif2": "Les dossiers n'ont pas pu etre chargés",
+		"Notif3": "Votre session a expirée veuillez vous connecter",
+		"Error": "Erreur",
+		"FillTrackId": "Vous devez saisir le numéro du dossier si vous souhaitez suivre un de vos dossiers",
+		"WrongFill": "L'identifiant du dossier que vous souhaitez suivre est un nombre. Veuillez saisir un nombre",
+		"Success": "Succès",
+		"SuccessMessage": "Nous avons pu retrouver votre dossier, vous pouvez a present consulter son etat d'avancement et suivre son évolution",
+		"ErrorMessage": "Nous n'avons pas réussi a retrouver votre dossier. Ceci peut etre du au fait que le numéro du dossier soit incorrect ou un problème de connexion a internet. Veuillez verifier ces paramètres puis réessayer ",
+		"Languages": "Langue inconnue"
+		
+
 	}
 
 }
